@@ -22,6 +22,10 @@ Added samples/olayer.perl to test the current Object Layer features.
 The object layer is in early development, so there's no documentation
 outside the olayer.perl comments.
 
+Added Philip Gwyn's serialization patch to Filter::Reference.
+Added Philip Gwyn's serialization test as samples/ref-type.perl.
+Updated documentation for Filter::Reference to match patch.
+
 
 0.06_07 1999.05.12
 ------------------
